--- a/src/index.webc
+++ b/src/index.webc
@@ -7,7 +7,7 @@ sub:
   - is pretty anxious about this, honestly
   - wants to sell you something (anything)
   - if you're looking for [my bio](/about/), that's on a different page
-  - you can't be one thing forever
+  - can't be one thing forever
 description: Art & code & other digital artifacts of my life.
 summary:
   - |
