--- a/src/_includes/utils/media-gallery.webc
+++ b/src/_includes/utils/media-gallery.webc
@@ -1,7 +1,7 @@
 <style webc:bucket="object">
   media-gallery {
     display: grid;
-    gap: var(--gap);
+    gap: var(--shim);
     grid-template-columns: repeat(auto-fit, minmax(min(100%, 300px), 1fr));
   }
 </style>
