--- a/src/art/theater.webc
+++ b/src/art/theater.webc
@@ -1,6 +1,6 @@
 ---
 layout: is/list
-title: Theater & Performance
+title: Theater & performance
 index: art:theater
 permalink: '/theater/index.html'
 summary: >
