--- a/src/_css/default/base.css
+++ b/src/_css/default/base.css
@@ -1,8 +1,11 @@
 html {
   --gap: clamp(12px, 10px + 2vi, 24px);
   --shim: calc(var(--gap) / 2);
-  --double: calc(var(--gap) * 2);
-  --spacer: min(var(--double) + 3vi, var(--gap) * 5);
+  --spacer: 3lh;
+
+  @supports (gap: round(1px, 1em)) {
+    --spacer: min(round(down, 2lh + 1vi, 0.5lh), 5lh);
+  }
 
   --bg: Canvas;
   --text: CanvasText;
@@ -28,14 +31,14 @@ html {
   background-size: cover;
   color: var(--text);
   color-scheme: var(--color-scheme, light dark);
-  font-family: var(--body-font, unset);
+  font-family: var(--body-font);
   font-variant-numeric: oldstyle-nums;
   line-height: 1.5;
 }
 
 body {
   font-size: max(1em, 0.9em + var(--fluid-scale, 0vi));
-  margin: 0;
+  margin: unset;
   padding: var(--gap, 12px);
 }
 
@@ -46,7 +49,7 @@ nav,
 aside,
 section,
 form {
-  margin-block: var(--gap, 1lh);
+  margin-block: 1lh;
   container: layout / inline-size;
 }
 
@@ -55,7 +58,7 @@ main {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: var(--title-font, unset);
+  font-family: var(--title-font);
   font-weight: normal;
   text-wrap: pretty;
 }
@@ -67,14 +70,18 @@ h1, h2, h3, h4, h5, h6 {
 
 d-i {
   display: block;
-  margin-block: var(--shim);
+  margin-block: 0.5lh;
+}
+
+dd + dt {
+  margin-block-start: 0.5lh;
 }
 
 dt::after {
   content: ' – ';
 }
 
-d-i dd {
+dd {
   margin-inline: unset;
 }
 
@@ -90,8 +97,14 @@ ul, ol {
   }
 }
 
+li + li,
+dd + dd {
+  margin-block-start: var(--list-item-space, 0.25lh);
+}
+
 [role=list] {
   --list-indent: 0;
+  --list-item-space: 0;
   list-style: none;
   margin-block: unset;
 }
@@ -107,6 +120,7 @@ pre, code, output, samp {
 
 abbr, p-category, dt {
   font-variant-caps: all-small-caps;
+  font-weight: 450;
   letter-spacing: 0.05em;
 }
 
@@ -116,10 +130,11 @@ table {
 
 hr {
   border-block-start: thin dotted var(--border);
-  margin-block: var(--spacer);
+  margin-block: var(--spacer) 1lh;
 
   [id=content] & {
     border: unset;
+    height: unset;
   }
 }
 
@@ -127,21 +142,21 @@ hr {
 [content-break] {
   &::before {
     color: var(--border);
-    content: '~ & & & ~';
-    content: '~ & & & ~' / '';
+    content: var(--hr);
+    content: var(--hr) / '';
     display: block;
-    font-family: var(--ui-font, unset);
+    font-family: var(--ui-font);
   }
 }
 
 [content-break]::before {
-  margin-block: var(--spacer) var(--gap);
+  margin-block: var(--spacer) 1lh;
 }
 
 caption,
 figcaption,
 small {
-  font-family: var(--ui-font, unset);
+  font-family: var(--ui-font);
 }
 
 svg {
@@ -162,31 +177,16 @@ emo-ji {
 }
 
 @container style(--italic) {
-  @supports (background-clip: text) or (-webkit-background-clip: text) {
-    strong {
-      background: var(
-        --text-gradient,
-        linear-gradient(
-          to bottom right,
-          var(--accent),
-          var(--feature)
-        )
-      );
-      background-clip: text;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      max-inline-size: max-content;
-    }
-  }
-
   em {
-    background: linear-gradient(
-      100deg,
-      transparent calc(0.5ch - 1px),
-      var(--mark, var(--bg)) 0.5ch calc(100% - 0.2ch),
-      transparent calc(100% - 0.2ch + 1px)
-    ) bottom / 100% 1cap no-repeat;
-    text-shadow: 1px 1px 0 var(--bg);
+    background: var(--em-background,
+      linear-gradient(
+        100deg,
+        transparent calc(0.5ch - 1px),
+        var(--mark, var(--bg)) 0.5ch calc(100% - 0.2ch),
+        transparent calc(100% - 0.2ch + 1px)
+      ) bottom / 100% 1cap no-repeat);
+    color: var(--em-color, currentColor);
+    text-shadow: 1px 1px 0 var(--em-shadow, var(--bg));
   }
 }
 
