--- a/src/_includes/embed/code-pen.webc
+++ b/src/_includes/embed/code-pen.webc
@@ -1,56 +1,36 @@
 <script webc:setup>
-  const penBase = 'https://codepen.io/';
+const filterObject = (obj) => {
+  Object
+    .keys(obj)
+    .forEach((key) => obj[key] === undefined && delete obj[key]);
+  return obj;
+}
 
-  const penUrl = (pen, user) => pen.includes('://')
-    ? pen
-    : `${penBase}${user || 'miriamsuzanne'}/pen/${pen}`;
+const buildSrc = (pen, options) => {
+  const opts = new URLSearchParams({
+    'embed-version': 2,
+    'default-tab': 'result',
+    user: 'miriamsuzanne',
+    editable: 'true',
+    ...filterObject(options),
+  });
 
-  const urlGet = (fromUrl, get) => {
-    if (!fromUrl) return;
-
-    const partKeys = ['user', null, 'hash'];
-    const parts = {};
-
-    fromUrl
-      .replace(penBase, '')
-      .split('/')
-      .forEach((part, i) => {
-        const key = partKeys[i];
-        if (key) { parts[key] = part; }
-      });
-
-    return parts[get];
-  }
+  const embed = pen.replace('/pen/', '/embed/');
+  return `${embed}?${opts.toString()}`;
+}
 </script>
 
-<p
-  class="codepen"
-  :data-slug-hash="this.hash || urlGet(this.src, 'hash')"
-  :data-editable="this.dataEditable || 'true'"
-  :data-height="this.dataHeight || 500"
-  :data-theme-id="this.dataThemeId || 39098"
-  :data-user="this.user || urlGet(this.src, 'user') || 'miriamsuzanne'"
-  :data-default-tab="this.tab || 'result'"
-  :data-embed-version="2"
-  :data-preview="this.dataPreview || 'none'"
->
-  See
-  <a :href="this.src || penUrl(this.hash, this.user)"><slot></slot></a>
-  by <a
-    :href="`${penBase}${urlGet(this.src, 'user')}/`"
-    @text="`@${urlGet(this.src, 'user')}`"
-  ></a>
-  on <a :href="penBase">CodePen</a>
-</p>
-
-<script
-  webc:keep
-  async
-  src="https://static.codepen.io/assets/embed/ei.js"
-></script>
-
-<style>
-.cp_embed_wrapper {
-  display: contents;
-}
-</style>
+<iframe
+  code-pen
+  :src="buildSrc(this.src, {
+    'default-tab': this.defaultTab,
+  })"
+  :height="this.height || 600"
+  :title="this.title || 'Codepen Embed'"
+  allowfullscreen="true"
+  allowtransparency="true"
+  frameborder="0"
+  loading="lazy"
+  scrolling="no"
+  width="100%"
+></iframe>
