--- a/src/_includes/objects/post-item.webc
+++ b/src/_includes/objects/post-item.webc
@@ -3,14 +3,10 @@
   list-item="post"
 >
   <h3><a :href="this.post.url" @text="this.post.data.title"></a></h3>
-  - <date-time :@date="this.post.date" @format="recent"></date-time>
+  &ndash; <date-time :@date="this.post.date" @format="recent"></date-time>
 </article>
 
 <style webc:bucket="object">
-  [list-item=post] h3 {
-    display: inline-block;
-  }
-
   [list-item=post] time {
     font-style: italic;
   }
