--- a/src/_includes/site/theme-controls.webc
+++ b/src/_includes/site/theme-controls.webc
@@ -120,7 +120,7 @@
   data-local="css-filter-blur"
 >
   <label for="filter-blur">blur</label>
-  <input id="filter-blur" type="range" min="0" value="0" max="12">
+  <input id="filter-blur" type="range" min="0" value="0" max="12" step="0.1">
   <output for="filter-blur"></output>
   <button data-btn="emoji" data-reset="filter-blur">
     <reset-left-line></reset-left-line>
