So much typography

--- a/src/_css/default/base.css
+++ b/src/_css/default/base.css
@@ -58,214 +58,11 @@ main {
   font-size-adjust: from-font;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: var(--title-font);
-  font-weight: normal;
-  text-wrap: pretty;
-}
-
-[data-flow] {
-  display: grid;
-  gap: var(--flow-gap, 0);
-}
-
-[data-flow=block] {
-  --flow-gap: 0.5lh;
-}
-
-[list-item] {
+call-out {
   display: block;
-
-  * { margin: unset; }
-
-  :is(h2, h3, h4) {
-    display: inline-block;
-    font-weight: normal;
-  }
-}
-
-item-meta {
-  font-family: var(--ui-font);
-}
-
-p-category {
-  background-color: var(--feature);
-  border-radius: 3px;
-  color: var(--bg);
-  padding-inline: var(--shim);
-}
-
-d-i {
-  display: block;
-  margin-block: 0.5lh;
-}
-
-dd + dt {
-  margin-block-start: 0.5lh;
-}
-
-dt::after {
-  content: ' –';
-  content: ' –' / '';
-}
-
-dd {
-  margin-inline: unset;
-}
-
-ul, ol {
-  padding-inline: var(--list-indent, 2ch) 0;
-
-  @container (inline-size < calc(100vi - 6ch)) {
-    --list-indent: 0;
-  }
-
-  :is(li) & {
-    --list-indent: initial;
-  }
-}
-
-li + li,
-dd + dd {
-  margin-block-start: var(--list-item-space, 0.25lh);
-}
-
-[role=list] {
-  --list-indent: 0;
-  --list-item-space: 0;
-  list-style: none;
-  margin-block: unset;
-}
-
-p, li {
-  hanging-punctuation: first last;
-  text-wrap: pretty;
-}
-
-pre, code, output, samp {
-  font-family: var(--code-font, revert);
-}
-
-pre {
-  border-inline-start: var(--shim) solid var(--border);
-  margin-inline-start: var(--code-outset, 0);
-  overflow: auto;
-  padding-inline-start: var(--gap);
-
-  @container (inline-size < calc(100vi - 6ch)) {
-    --code-outset: calc(var(--gap) * -1.5);
-  }
-}
-
-abbr, p-category, dt {
-  font-variant-caps: all-small-caps;
-  font-weight: 450;
-  letter-spacing: 0.05em;
-}
-
-table,
-table-like {
-  font-variant-numeric: tabular-nums;
-}
-
-table-like {
-  display: table;
-  inline-size: 100%;
-}
-
-t-r { display: table-row; }
-t-h, t-d { display: table-cell; }
-
-t-d {
-  background-color: var(--cell-color);
-}
-
-hr {
-  border-block-start: thin dotted var(--border);
-  margin-block: var(--spacer) 1lh;
-
-  [id=content] & {
-    border: unset;
-    height: unset;
-  }
-}
-
-[id=content] hr,
-[content-break] {
-  &::before {
-    color: var(--border);
-    content: var(--hr);
-    content: var(--hr) / '';
-    display: block;
-    font-family: var(--ui-font);
-  }
-}
-
-[content-break]::before {
-  margin-block: var(--spacer) 1lh;
-}
-
-figure {
-  display: grid;
-  row-gap: 0.5lh;
-}
-
-iframe {
-  display: block;
-  width: 100%;
-}
-
-caption,
-figcaption,
-small {
-  font-family: var(--ui-font);
+  margin-block: 1lh;
 }
 
 svg {
   fill: currentColor;
-}
-
-[data-icon] {
-  display: inline-block;
-  inline-size: 1em;
-  vertical-align: middle;
-}
-
-emo-ji {
-  display: inline-block;
-  filter: drop-shadow(1px 1px 0 var(--full-bg, Canvas));
-  font-family: var(--emoji-font);
-  font-synthesis: none;
-}
-
-@container style(--italic) {
-  em {
-    background: var(--em-background,
-      linear-gradient(
-        100deg,
-        transparent calc(0.5ch - 1px),
-        var(--mark, var(--bg)) 0.5ch calc(100% - 0.2ch),
-        transparent calc(100% - 0.2ch + 1px)
-      ) bottom / 100% 1cap no-repeat);
-    color: var(--em-color, currentColor);
-    text-shadow: 1px 1px 0 var(--em-shadow, var(--bg));
-  }
-}
-
-p-note, p-role {
-  font-style: italic;
-}
-
-code[style*=--color-tile] {
-  &::before {
-    aspect-ratio: 1;
-    background:
-      linear-gradient(var(--color-tile) 0 100%),
-      linear-gradient(45deg, black 50%, white 50%);
-    border: thin solid;
-    content: '';
-    display: inline-block;
-    inline-size: 1cap;
-    margin-inline-end: 0.5ch;
-  }
 }
