--- a/src/_includes/objects/post-item.webc
+++ b/src/_includes/objects/post-item.webc
@@ -1,13 +1,4 @@
-<article
-  webc:root="override"
-  list-item="post"
->
-  <h3><a :href="this.post.url" @text="this.post.data.title"></a></h3>
+<li page-item="post">
+  <a :href="this.post.url" @text="this.post.data.title"></a>
   &ndash; <date-time :@date="this.post.date" @format="recent"></date-time>
-</article>
-
-<style webc:bucket="object">
-  [list-item=post] time {
-    font-style: italic;
-  }
-</style>
+</li>
