--- a/src/_includes/site/site-styles.webc
+++ b/src/_includes/site/site-styles.webc
@@ -13,10 +13,14 @@
   @import url('/css/default/base.css') layer(default);
   @import url('/css/default/fonts.css') layer(default);
   @import url('/css/default/theme.css') layer(default);
+  @import url('/css/default/type.css') layer(default);
   @import url('/css/default/forms.css') layer(default);
   @import url('/css/default/buttons.css') layer(default);
   @import url('/css/default/links.css') layer(default);
   @import url('/css/default/dialog.css') layer(default);
+</style>
+<style webc:keep data-layer="objects">
+  @import url('/css/objects.css') layer(objects);
 </style>
 </template>
 
@@ -31,7 +35,7 @@
 ></layer-bundle>
 <layer-bundle
   webc:nokeep
-  layer="object"
+  layer="objects"
 ></layer-bundle>
 <layer-bundle
   webc:nokeep
