--- a/src/_includes/objects/post-list.webc
+++ b/src/_includes/objects/post-list.webc
@@ -1,7 +1,6 @@
-<section webc:root data-flow>
+<ul webc:root="override">
   <post-item
     webc:for="post of this.posts.sort((a, b) => b.date - a.date)"
-    list-item="post"
     :@post="post"
   ></post-item>
-</section>
+</ul>
