--- a/src/_css/default/base.css
+++ b/src/_css/default/base.css
@@ -35,6 +35,7 @@ html {
   font-size: var(--font-size-auto);
   font-variant-numeric: oldstyle-nums;
   line-height: 1.5;
+  text-shadow: 1px 1px 0 var(--full-bg);
 }
 
 body {
