--- a/src/_css/default/theme.css
+++ b/src/_css/default/theme.css
@@ -49,6 +49,7 @@ html {
   ;
 
   --hr: '~ & & & ~';
+  --list-marker: '~ ';
 
   --link-color: currentColor;
   ---link-line-color: var(--accent);
@@ -103,6 +104,7 @@ html {
   --ui-font: var(--fonts-code, var(--fonts-code--));
 
   --hr: '>>>>>>>>> _';
+  --list-marker: '> ';
   --link-color: currentColor;
 
   @supports (fill: light-dark(red, red)) {
@@ -151,6 +153,7 @@ html {
   --ui-font: var(--fonts-sans, var(--fonts-sans--));
 
   --hr: '!! #@*% !!';
+  --list-marker: '☞ ';
   --link-color: currentColor;
 
   @supports (fill: light-dark(red, red)) {
