Add micropub auth

--- a/src/_includes/site/open-graph.webc
+++ b/src/_includes/site/open-graph.webc
@@ -5,7 +5,7 @@
 <meta property="og:type" content="website" />
 <meta property="og:title" :content="title">
 <meta property="og:image" :content="ogImage(og, $data.ogSrc)">
-<meta property="og:url" :content="absoluteUrl(page.url, site.url)">
+<meta property="og:url" :content="`https://${site.domain}${page.url}`">
 <meta property="og:site_name" :content="site.title">
 <meta property="og:description" :content="mdRemove(desc)">
 <meta name="description" :content="mdRemove(desc)">
