--- a/src/_layouts/base.webc
+++ b/src/_layouts/base.webc
@@ -16,6 +16,8 @@
       :@desc="description || summary || site.description"
     >
 
+    <meta name="generator" :content="eleventy.generator">
+
     <link rel="canonical" :href="`https://${site.domain}${page.url}`">
     <link rel="micropub" :href="`https://${site.domain}/api/micropub`">
     <link rel="authorization_endpoint" href="https://indieauth.com/auth">
