--- a/src/_layouts/page.webc
+++ b/src/_layouts/page.webc
@@ -17,11 +17,13 @@ layout: base
 </dialog>
 
 <header id="banner" line-length>
-  <a
-    href="/"
-    rel="home"
-    :aria-current="this.page.url === '/' ? 'page' : false"
-  >mia</a>
+  <span>
+    [<a
+      href="/"
+      rel="home"
+      :aria-current="this.page.url === '/' ? 'page' : false"
+    >mia</a>]
+  </span>
   <dialog-toggle>
     <button
       aria-controls="theme-controls"
